--- a/_config.yml
+++ b/_config.yml
@@ -63,7 +63,8 @@ pagination_dir: page
 # Extensions
 ## Plugins: http://hexo.io/plugins/
 ## Themes: http://hexo.io/themes/
-theme: replica
+# theme: replica
+theme: hexo-theme-replica
 
 # Google Analytics
 ga: # GA code UA-XXXXXXXX-X
