--- a/_config.yml
+++ b/_config.yml
@@ -12,8 +12,8 @@ favicon: https://assets-cdn.github.com/favicon.ico
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: http://sabrinaluo.com/tech
-root: /tech/
+url: https://hexo-store-1gmxyeqrfa257e99-1304082097.ap-shanghai.app.tcloudbase.com/
+root: /public/
 permalink: :year/:month/:day/:title/
 permalink_defaults:
 
