--- a/themes/replica/_config.yml
+++ b/themes/replica/_config.yml
@@ -15,6 +15,9 @@ menu:
 
 rss_dir: atom.xml
 
+css:
+  - /
+
 # widget
 ga: # google analytics tracking code UA-XXXXXXX-X
 baidutongji: # baidutongji tracking code
