--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: 成东
+title: 多谢鹏总转让电脑
 description: 博客文章
 author: chengdong
 language: zh-CN
